GNOME Bugzilla – Bug 746152
Arrow keys doesn't work after nav buttons auto hide
Last modified: 2015-03-23 12:16:14 UTC
Arrow keys to navigate in preview mode only works when nav buttons in preview modes are visible. As soon as these buttons auto hide, using arrow keys to navigate in preview mode doesn't work.
Created attachment 299432 [details] [review] preview-nav-buttons: Remove unnecessary properties
Created attachment 299433 [details] [review] preview-nav-buttons: Untie keynav from the visibility of the buttons
Created attachment 299434 [details] [review] preview-nav-buttons: Untie keynav from the visibility of the buttons
Created attachment 299435 [details] [review] preview-nav-buttons: Re-evaluate the ability to navigate at each step
Works for me.
(In reply to Pranav Kant from comment #5) > Works for me. Thanks for trying them out.