preview-nav-buttons: Remove unnecessary properties

The enable-next and enable-prev properties introduced in
e8a445ee37c3ff53b82b1eb557afdbebdb8ea6b1 are not really necessary. We
can remove a bunch of code, and paves the way for the next commit.

https://bugzilla.gnome.org/show_bug.cgi?id=746152